# Touch-Assay-Timer-Tauri

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src-frontend/: index.html  styles.css
src-frontend/js/: audio.js  db.js  export.js  main.js  models.js  timer-worker.js  toast.js  utils.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  export.rs  main.rs  timing.rs  wake_lock.rs
