[package]
name = "touch-assay-timer"
version = "1.0.0"
description = "Touch Assay Timer — precision stimulus-response timing for C. elegans experiments"
authors = ["Touch Assay Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "touch-assay-timer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# SQLite — bundled feature compiles SQLite from source, no system dependency needed
rusqlite = { version = "0.32", features = ["bundled"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Mutex for shared SQLite state
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS wake-lock via IOKit power assertions
core-foundation = "0.10"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
